--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+beautifulsoup4==4.9.3
 browser-cookie3==0.12.1
+bs4==0.0.1
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
@@ -7,28 +9,25 @@ colorama==0.4.4
 cryptography==3.4.7
 Flask==2.0.1
 idna==2.10
-importlib-metadata==4.4.0
+importlib-metadata==4.5.0
 itsdangerous==2.0.1
 jeepney==0.6.0
 Jinja2==3.0.1
 joblib==1.0.1
 keyring==23.0.1
+lxml==4.6.3
 lz4==3.1.3
 MarkupSafe==2.0.1
 nltk==3.6.2
-numpy==1.20.3
-pandas==1.2.4
 pbkdf2==1.3
 pyaes==1.6.1
 pycparser==2.20
 pycryptodome==3.10.1
-python-dateutil==2.8.1
-pytz==2021.1
 pywin32-ctypes==0.2.0
 regex==2021.4.4
 requests==2.25.1
 SecretStorage==3.3.1
-six==1.16.0
+soupsieve==2.2.1
 tqdm==4.61.0
 urllib3==1.26.5
 Werkzeug==2.0.1
