--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 beautifulsoup4==4.9.3
+blis==0.7.4
 browser-cookie3==0.12.1
 bs4==0.0.1
+catalogue==2.0.4
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
-click==8.0.1
+click==7.1.2
 colorama==0.4.4
 cryptography==3.4.7
+cymem==2.0.5
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
 idna==2.10
-importlib-metadata==4.5.0
+importlib-metadata==4.4.0
 itsdangerous==2.0.1
 jeepney==0.6.0
 Jinja2==3.0.1
@@ -18,17 +24,36 @@ keyring==23.0.1
 lxml==4.6.3
 lz4==3.1.3
 MarkupSafe==2.0.1
+murmurhash==1.0.5
 nltk==3.6.2
+numpy==1.20.3
+packaging==20.9
+pandas==1.2.4
+pathy==0.5.2
 pbkdf2==1.3
+preshed==3.0.5
 pyaes==1.6.1
 pycparser==2.20
 pycryptodome==3.10.1
+pydantic==1.7.4
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
 pywin32-ctypes==0.2.0
 regex==2021.4.4
 requests==2.25.1
 SecretStorage==3.3.1
+six==1.16.0
+smart-open==3.0.0
 soupsieve==2.2.1
+spacy==3.0.6
+spacy-legacy==3.0.5
+SQLAlchemy==1.4.17
+srsly==2.4.1
+thinc==8.0.3
 tqdm==4.61.0
+typer==0.3.2
 urllib3==1.26.5
+wasabi==0.8.2
 Werkzeug==2.0.1
 zipp==3.4.1
